# claude-code-enhancement

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  pyproject.toml  quick-install.sh  requirements.txt  run_tests.sh
.claude/context/: memory_store.json  state.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: README.md  install.sh  settings.template.json  uninstall.sh
docs/: API.md  ARCHITECTURE_V2.md  ARCHIVE_QUICK_START.md  CHANGELOG.md  CLOSURE_ROADMAP.md  CURSOR_MIGRATION.md  FRONTIER_ANALYSIS.md  LAYER_2_3_ENHANCEMENTS.md  MCP_INTEGRATION_GUIDE.md  PERMISSION_HOOK_GUIDE.md  PROJECT_ARCHIVE_PLAN.md  PROJECT_SWITCHING.md  PROJECT_SWITCHING_QUICK_REF.md  QUICK_REFERENCE.md  QUICK_START.md  REAL_WORLD_SCENARIOS.md  SETTINGS_TEMPLATES.md  TMUX_DEMO.md  TMUX_GUIDE.md
hooks/: context_query.py  hooks.json  permission_learning_hook.py  permission_report.py  project_knowledge_hook.py  session_start_hook.py  token_optimizer.py
scripts/: test-permissions.sh
src/: __init__.py  interfaces.py  pipeline.py
src/core/: __init__.py  context_manager.py  durable_knowledge.py  feedback_collector.py  knowledge_retriever.py  llm_error_analyzer.py  meta_learning.py  multi_file_reasoning.py  permission_applier.py  project_knowledge.py  project_knowledge_learner.py  self_modification.py  strategy_optimizer.py  unified.py
src/layer0/: __init__.py  execution_sandbox.py  linting_tools.py  test_frameworks.py
src/layer1/: __init__.py  action.py  execution_sandbox.py  feedback.py  linting_feedback.py  observation.py  test_verification.py
src/layer2/: __init__.py  advanced_reasoning.py  cognitive.py  contrastive_learning.py  error_learning.py  feedback_loop.py  knowledge_transfer.py
src/layer3/: __init__.py  adaptation_engine.py  continuous_learning.py  evolution_tracker.py  meta.py
src/llm/: __init__.py
templates/: README.md  l1-minimal.json  l2-standard-go.json  l2-standard-python.json  l3-elevated.json  l4-full-trust.json  settings.go.json  settings.local.json  settings.minimal.json  settings.python.json
tests/: conftest.py  test_context_integration.py  test_context_manager.py  test_multi_file_reasoning.py  test_permission_integration.py  test_personal_memory.py  test_pipeline.py
(+9 files in other folders)
